<resources>
    <string name="app_name">Carolina Beach State Park</string>
    <string name="popular">Popular Park Locations:</string>

    <string name="about_info">Created by Bobby Palmer. Ecosystem, animal, and plant data courtesy of UNCW\'s Island Ecology Website.</string>
    <string name="archives_url"><![CDATA[<a href="https://sites.google.com/site/islandecology12/">Visit UNCW Island Ecology</a>]]></string>

    <string name="nav_home">Home</string>
    <string name="nav_ecosystems">Ecosystems</string>
    <string name="nav_animals">Find Animals</string>
    <string name="nav_plants">Find Plants</string>
    <string name="nav_map">Park Map</string>
    <string name="nav_about">About</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="animal">Animals</string>
    <string name="plant">Plants</string>

    <string name="map_icon_txt">Visit</string>
    <string name="title_activity_maps">Park Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to allow park navigation.</string>
    <string name="location_permission_denied">This application requires location services to be enabled in order to function properly. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>
    <string name="permission_required_toast">Location permission is required for this feature.</string>
</resources>
